--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -3,6 +3,7 @@
 /* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
 
+/* Define color variables */
 :root {
     --primary-color: #FE5F55;
     --secondary-color: #F0B67F;
@@ -12,34 +13,38 @@
     --background-color: #f8f8f8; /* Background color for navigation items */
 }
 
+/* Reset default styles */
 body {
-    font-family: Arial, sans-serif; /* Change font as needed */
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #fff; /* General background color */
-    color: #333; /* Default text color */
+    background-color: #fff;
+    color: #333;
 }
 
+/* Headings styles */
 h1, h2, h3, h4, h5, h6 {
-    color: var(--primary-color); /* Text color for headings */
+    color: var(--primary-color);
 }
 
+/* Paragraph styles */
 p {
-    color: #555; /* Text color for paragraphs */
+    color: #555;
 }
 
+/* Header styles */
 header {
     background: linear-gradient(to bottom, #FE5F55, #F0B67F);
-    background-color: var(--accent1-color); /* Header background color */
+    background-color: var(--accent1-color);
     padding: 20px;
-    text-align: center; /* Center the content horizontally */
-    display: grid; /* Use Grid for layout */
-    grid-template-columns: auto 1fr auto; /* Three columns, logo-auto-title-navigation */
-    align-items: center; /* Center items vertically */
+    text-align: center;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    align-items: center;
 }
 
 .logo {
-    justify-self: start; /* Aligns logo to the start of the grid cell */
+    justify-self: start;
     display: flex;
     align-items: center;
 }
@@ -47,30 +52,30 @@ header {
 .logo img {
     max-width: 100%;
     height: auto;
-    margin-right: 10px; /* Add some right margin */
+    margin-right: 10px;
 }
 
 .logo h1 {
-    margin: 0; /* Remove default margin */
+    margin: 0;
 }
 
 nav ul {
     list-style-type: none;
     padding: 0;
-    display: flex; /* Use Flexbox for horizontal layout */
-    justify-content: center; /* Center the navigation horizontally */
-    align-items: center; /* Center items vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 nav ul li {
     margin-right: 20px;
-    border: 4px solid var(--border-color); /* Increase border width */
-    padding: 10px 20px; /* Add padding inside each item */
-    background-color: var(--background-color); /* Background color for navigation items */
+    border: 4px solid var(--border-color);
+    padding: 10px 20px;
+    background-color: var(--background-color);
 }
 
 nav ul li a {
-    font-size: 16px; /* Increase font size */
+    font-size: 16px;
 }
 
 .hero {
@@ -89,13 +94,13 @@ nav ul li a {
     top: 51%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.8); /* Hero content background with opacity */
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 10px;
     max-width: 80%;
 }
 
 .hero-content h1 {
-    color: var(--secondary-color); /* Hero title text color */
+    color: var(--secondary-color);
 }
 
 .hero-content article {
@@ -104,207 +109,190 @@ nav ul li a {
 
 .hero-content article img {
     float: right;
-    max-width: 40%; /* Adjust image size as needed */
-    margin-left: 20px; /* Spacing between image and text */
+    max-width: 40%;
+    margin-left: 20px;
 }
 
-/* Adding styles for the footer */
+/* Footer styles */
 footer {
-    display: flex; /* Utilize Flexbox for horizontal layout */
-    justify-content: flex-end; /* Distribute items evenly along the container */
-    align-items: center; /* Center items vertically */
-    background-color: var(--accent1-color); /* Color of the footer */
-    padding: 20px; /* Padding for spacing */
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: var(--accent1-color);
+    padding: 20px;
 }
 
 footer p {
-    margin: 0 320px; /* Remove default margin */
-    text-align: center; /* Center the text */
+    margin: 0 320px;
+    text-align: center;
 }
 
 footer img {
-    margin-left: 10px; /* Add some space between the social icons */
-    align-self: flex-end; /* Align social icons to the bottom */
+    margin-left: 10px;
+    align-self: flex-end;
 }
 
 section img {
-    width: 800px; /* Set desired width */
-    height: auto; /* Maintain image aspect ratio */
+    width: 800px;
+    height: auto;
 }
 
-/* Adding styles for the adventures section */
+/* Adventures section styles */
 .adventures {
-    display: flex; /* Utilize Flexbox for horizontal layout */
-    justify-content: space-between; /* Distribute items evenly along the container */
-    margin-top: 20px; /* Add some space at the top */
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
 }
 
 .adventures figure {
-    margin: 0; /* Remove default margins */
-    text-align: center; /* Center the content within the figure */
+    margin: 0;
+    text-align: center;
 }
 
 .adventures img {
-    max-width: 100%; /* Ensure images do not extend beyond their container */
+    max-width: 100%;
 }
 
 .adventures figcaption {
-    text-align: center; /* Center the caption text */
-    margin-top: 10px; /* Add space between the image and the caption */
+    text-align: center;
+    margin-top: 10px;
 }
 
+/* Heading styles */
 h2 {
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add shadow to the text */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     position: relative;
 }
 
 h2::after {
-    content: ''; /* Add content to the pseudo-element */
-    position: absolute; /* Set absolute position to position the pseudo-element below the title */
-    bottom: -5px; /* Position the pseudo-element 5px below the text */
-    left: 50%; /* Position the pseudo-element horizontally centered */
-    transform: translateX(-50%); /* Center the pseudo-element horizontally */
-    width: 50px; /* Width of the line */
-    height: 2px; /* Thickness of the line */
-    background-color: var(--primary-color); /* Color of the line */
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 50px;
+    height: 2px;
+    background-color: var(--primary-color);
 }
 
-/* Adding styles for the navigation menu */
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    padding: 5px 10px; /* Add space around the link text */
-    border-radius: 5px; /* Add rounded corners to the background */
-    background-color: #FE5F55; /* Highlight background color */
-    color: #fff; /* Text color */
-    transition: background-color 0.3s ease, color 0.3s ease; /* Add smooth transition to background color change */
-}
-
-nav ul li a:hover {
-    background-color: #F0B67F; /* Change background color on hover */
-    color: #333;
-}
-/* Position the employee profiles section */
+/* Employee profiles section styles */
 .employee-profiles {
     position: absolute;
-    top: 270px; /* Adjust as needed */
-    right: 80px; /* Adjust as needed */
+    top: 270px;
+    right: 80px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
 
-/* Margin between employee profiles */
 .employee-profile {
     margin-bottom: 20px;
 }
 
-/* Styling for employee profile images */
 .profile-image {
     width: 100px;
     height: auto;
     border-radius: 50%;
 }
 
-/* Margin for the main content area */
 main {
     margin-left: 20px;
 }
 
-/* Position and styling for the form container */
 .form-container {
     position: absolute;
-    top: 320px; /* Adjust the distance from the top as needed */
-    right: 375px; /* Adjust the distance from the right as needed */
-    background-color: #f5f5f5; /* Background color */
-    padding: 10px; /* Internal padding */
-    border-radius: 10px; /* Rounded borders */
-    margin-top: 30px; /* Top margin */
+    top: 320px;
+    right: 375px;
+    background-color: #f5f5f5;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 30px;
 }
 
-/* Maximum width and centering for the form */
 .form-container form {
-    max-width: 600px; /* Maximum form width */
-    margin: 0 auto; /* Center the form horizontally */
-    font-size: 14px; /* Adjust the font size as needed */
+    max-width: 600px;
+    margin: 0 auto;
+    font-size: 14px;
 }
 
-/* Styling for form labels */
 .form-container label {
-    display: flex; /* Use flexbox to align items in a row */
-    align-items: center; /* Vertically align items */
-    margin-bottom: 5px; /* Bottom margin between options */
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
 }
 
-/* Styling for text inputs, email inputs, and text areas */
 .form-container input[type="text"],
 .form-container input[type="email"],
 .form-container textarea {
-    width: 96%; /* Full width */
-    padding: 5px; /* Internal padding */
-    margin-bottom: 5px; /* Bottom margin */
-    border: 1px solid #ccc; /* Border */
-    border-radius: 10px; /* Rounded borders */
+    width: 96%;
+    padding: 5px;
+    margin-bottom: 5px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
 }
 
-/* Styling for radio buttons */
 .form-container input[type="radio"] {
-    display: none; /* Hide radio buttons */
+    display: none;
 }
 
-/* Styling for radio button labels */
 .form-container input[type="radio"] + label {
-    display: flex; /* Use flexbox to align items in a row */
-    align-items: center; /* Vertically align items */
-    margin-bottom: 5px; /* Bottom margin */
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
 }
 
-/* Styling for radio button circle */
 .form-container input[type="radio"] + label:before {
-    content: ""; /* Empty content before the radio button */
-    display: inline-block; /* Display the radio button */
-    width: 20px; /* Width of the radio button */
-    height: 20px; /* Height of the radio button */
-    border-radius: 50%; /* Make the radio button circular */
-    border: 1px solid #ccc; /* Border of the radio button */
-    margin-right: 5px; /* Margin to the right of the radio button */
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+    margin-right: 5px;
 }
 
-/* Styling for checked radio buttons */
 .form-container input[type="radio"]:checked + label:before {
-    background-color: #007bff; /* Background color of the selected radio button */
+    background-color: #007bff;
 }
 
-/* Styling for checkboxes */
 .form-container input[type="checkbox"] {
-    margin-top: 1px; /* Top margin */
+    margin-top: 1px;
 }
 
-/* Styling for submit button */
 .form-container input[type="submit"] {
-    background-color: #007bff; /* Button background color */
-    color: #fff; /* Button text color */
-    padding: 10px 20px; /* Internal padding */
-    border: none; /* No border */
-    border-radius: 5px; /* Rounded borders */
-    cursor: pointer; /* Pointer cursor */
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
-/* Hover styling for submit button */
 .form-container input[type="submit"]:hover {
-    background-color: #0056b3; /* Background color on hover */
+    background-color: #0056b3;
 }
 
 .form-container h4 {
-    margin-top: 0; /* Remove default top margin */
-    margin-bottom: 10px; /* Add some bottom margin for spacing */
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+#google-map {
+    border: 0;
+    width: 40%;
+    height: 450px;
+}
+
+.form-container button[type="submit"] {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.form-container button[type="submit"]:hover {
+    background-color: #0056b3;
 }
