--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -6,9 +6,9 @@
 /* Define color variables */
 :root {
     --primary-color: #FE5F55;
-    --secondary-color: #F0B67F;
-    --accent1-color: #D6D1B1;
-    --accent2-color: #C7EFCF;
+    --secondary-color: #2E8B57;
+    --accent1-color: #87CEEB;
+    --accent2-color: #8B4513;
     --border-color: #ccc; /* Color for borders */
     --background-color: #f8f8f8; /* Background color for navigation items */
 }
@@ -25,6 +25,7 @@ body {
 /* Headings styles */
 h1, h2, h3, h4, h5, h6 {
     color: var(--primary-color);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 /* Paragraph styles */
@@ -34,9 +35,9 @@ p {
 
 /* Header styles */
 header {
-    background: linear-gradient(to bottom, #FE5F55, #F0B67F);
+    background: linear-gradient(to bottom, #FFA07A, #2E8B57);
     background-color: var(--accent1-color);
-    padding: 20px;
+    padding: 2px;
     text-align: center;
     display: grid;
     grid-template-columns: auto 1fr auto;
@@ -50,7 +51,7 @@ header {
 }
 
 .logo img {
-    max-width: 100%;
+    max-width: 80px;
     height: auto;
     margin-right: 10px;
 }
@@ -58,6 +59,7 @@ header {
 .logo h1 {
     margin: 0;
 }
+
 
 nav ul {
     list-style-type: none;
@@ -67,15 +69,23 @@ nav ul {
     align-items: center;
 }
 
+
 nav ul li {
-    margin-right: 20px;
-    border: 4px solid var(--border-color);
-    padding: 10px 20px;
-    background-color: var(--background-color);
+    margin-top: 30px;
+    margin-right: 80px; 
 }
 
+
 nav ul li a {
-    font-size: 16px;
+    font-size: 20px;
+    text-decoration: none; 
+    color: var(--primary-color); 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+}
+
+
+nav ul li a:hover {
+    color: var(--accent-color); 
 }
 
 .hero {
@@ -92,25 +102,43 @@ nav ul li a {
 .hero-content {
     position: absolute;
     top: 51%;
-    left: 50%;
+    left: 40%;
     transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px;
     max-width: 80%;
 }
 
 .hero-content h1 {
-    color: var(--secondary-color);
+    color: var(--primary-color);
 }
 
 .hero-content article {
     position: relative;
 }
 
+.hero-content p {
+    color: #f5f5f5;
+}
+
 .hero-content article img {
     float: right;
     max-width: 40%;
     margin-left: 20px;
+}
+
+.reserve-button {
+    background-color: #FE5F55;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.reserve-button:hover {
+    background-color: #FF6347;
 }
 
 /* Footer styles */
@@ -160,7 +188,6 @@ section img {
 
 /* Heading styles */
 h2 {
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     position: relative;
 }
 
@@ -172,13 +199,13 @@ h2::after {
     transform: translateX(-50%);
     width: 50px;
     height: 2px;
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color-color);
 }
 
 /* Employee profiles section styles */
 .employee-profiles {
     position: absolute;
-    top: 270px;
+    top: 200px;
     right: 80px;
     display: flex;
     flex-direction: column;
@@ -196,15 +223,15 @@ h2::after {
 }
 
 main {
-    margin-left: 20px;
+    margin-left: 0;
 }
 
 .form-container {
     position: absolute;
-    top: 320px;
+    top: 200px;
     right: 375px;
     background-color: #f5f5f5;
-    padding: 10px;
+    padding: 5px;
     border-radius: 10px;
     margin-top: 30px;
 }
@@ -296,3 +323,151 @@ main {
 .form-container button[type="submit"]:hover {
     background-color: #0056b3;
 }
+
+/* Main content styles */
+.main-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow-x: auto;
+}
+
+/* Trip image container styles */
+.trip-image {
+    display: inline-block; 
+    width: 30%; 
+    margin-right: 15px;
+    margin-left: 15px; 
+    padding: 10px;
+}
+
+
+.trip-image:last-child {
+    margin-right: 0; 
+}
+
+
+.trip-image img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-bottom: 10px;
+}
+
+
+.trip-info {
+    text-align: center;
+}
+
+.trip-info h3 {
+    margin: 5px 0;
+}
+
+.trip-info p {
+    margin: 5px 0;
+}
+
+.trip-info a {
+    display: inline-block;
+    background-color: #333;
+    color: #fff;
+    text-decoration: none;
+    padding: 8px 20px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+
+/* Table styles */
+.trip-table {
+    width: 100%;
+    margin-top: 20px;
+    border-collapse: collapse;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.trip-table th, .trip-table td {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.trip-table th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
+
+.trip-table tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+.trip-table tbody tr:hover {
+    background-color: #f2f2f2;
+}
+.grid-item {
+    display: inline-block;
+    vertical-align: top;
+    width: 30%;
+    margin-right: 3%;
+    text-align: center;
+    box-sizing: border-box;
+    margin-top: 30px;
+}
+
+.grid-item:last-child {
+    margin-right: 0;
+}
+
+.grid-image {
+    max-width: 100%;
+    height: 300px; 
+}
+
+.symbol {
+    max-width: 10%;
+    height: auto;
+    padding-bottom: 1px;
+    }
+    .newsletter {
+        background-image: url('images/fondo.jpg'); 
+        background-size: cover; 
+        padding: 20px 0; 
+        text-align: center; 
+        color: white; 
+    }
+    
+    .container {
+        max-width: 1400px; 
+        margin: 0 auto; 
+    }
+    
+    h2 {
+        font-size: 25px; 
+        margin-bottom: 5px; 
+    }
+    
+    .newsletter p {
+        font-size: 16px; 
+        margin-bottom: 30px; 
+        color: #f5f5f5;
+    }
+    
+    .newsletter-form input,
+    .newsletter-form button {
+        padding: 5px 10px; 
+        font-size: 15px; 
+        border: none; 
+        border-radius: 25px; 
+        margin-right: 5px; 
+    }
+    
+    button {
+        background-color: #FE5F55; 
+        color: white; 
+        cursor: pointer; 
+        transition: background-color 0.3s ease; 
+    }
+    
+    button:hover {
+        background-color: #FF8669; 
+    }
+    
